ajout des tests et ajustement des makefiles

--- a/hello/Makefile
+++ b/hello/Makefile
@@ -1,16 +1,21 @@
-CPPFLAGS += -I /usr/include/python3.7m
-LIBS=-lpython3.7m 
+CPPFLAGS += `python3-config --includes`
+LIBS=`python3-config --ldflags`
 
 COMPOSANT = hello_component
 
 LIBSO = ${COMPOSANT}.so
 LIBSO_OBJS = ${COMPOSANT}.o
 
+all: test $(LIBSO)
+
 include ../gcc.mk
 include ../pybind11.mk
 
 
-all: $(LIBSO)
+test: $(LIBSO)
+	echo "execution du test"
+	python3 test.py
+
 clean:
 	rm -f ${LIBSO}  ${LIBSO_OBJS}
 
