--- a/composant_cle/Makefile
+++ b/composant_cle/Makefile
@@ -4,22 +4,22 @@ LIBS=`python3-config --ldflags`
 COMPOSANT = cle_component
 
 LIBSO = ${COMPOSANT}.so
-LIBSO_OBJS = ${COMPOSANT}.o
+LIBSO_OBJS = ${COMPOSANT}.o uECC.o
 
 all: test $(LIBSO)
 
 include ../gcc.mk
 include ../pybind11.mk
 
+uECC.o: ./micro-ecc/uECC.c
+	g++ -c -o $@ $< $(CPPFLAGS)
 
 test: $(LIBSO)
 	echo "execution du test"
 	python3 test.py
 	
 clean:
-	rm -f ${LIBSO}  ${LIBSO_OBJS}
-
+	rm -f ${LIBSO} ${LIBSO_OBJS}
 
 ${DESTINATION_LIBSO}: ${LIBSO}
 	cp $< $@
-
